Added Jwt support to the backend.
